# Open_source_network

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  db.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.github/workflows/: ci.yml  data-refresh.yml  deploy-site.yml  publish.yml
api/: package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
api/src/: auth.ts  cors.ts  index.ts
data/: README.md  synonyms.json
engine/: __init__.py  embeddings.py  explain.py  graph.py  health.py  scoring.py
oss_neural_match/: __init__.py  server.py
oss_neural_match/engine/: __init__.py  embeddings.py  explain.py  scoring.py
scripts/: generate_alternatives.py  generate_comparisons.py  generate_seo_data.py  generate_stack_recipes.py  refresh_github_data.py
tests/: conftest.py  test_data_integrity.py  test_graph.py  test_health.py  test_scoring.py  test_tools.py
website/: astro.config.mjs  package-lock.json  package.json
website/public/: _headers
website/src/data/: alternatives.json  comparisons.json  seo.json  stack_recipes.json
website/src/layouts/: Base.astro
website/src/pages/: 404.astro  about.astro  index.astro
website/src/pages/categories/: [category].astro  index.astro
website/src/pages/compare/: [...slugs].astro  index.astro
website/src/pages/tools/: [slug].astro  index.astro
website/src/styles/: global.css
website/src/utils/: db.ts
