[project]
name = "open-source-network-mcp"
version = "2.0.0"
description = "244-tool open-source intelligence engine for Claude Code"
requires-python = ">=3.11"
authors = [
    { name = "KingHippo", email = "king.hippopotamus@yahoo.com" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
