[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-source-network"
version = "2.0.0"
description = "Open Source Network — 244-tool open-source intelligence engine for Claude Code"
requires-python = ">=3.11"
authors = [
    { name = "KingHippo", email = "king.hippopotamus@yahoo.com" },
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["mcp", "claude", "open-source", "developer-tools", "tool-discovery", "stack-builder", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://oss-neural-match.pages.dev"
Repository = "https://github.com/TheKingHippopotamus/Open_source_network"

[project.scripts]
open-source-network = "oss_neural_match.server:main"

[tool.hatch.build.targets.sdist]
include = [
    "oss_neural_match/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["oss_neural_match"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
